Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "upper()\"art vandelay\" # \"ART VANDELAY\""
    ]
   },
   {
